[package]
name = "day-two"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_utils = { path = "../aoc_utils" }
clap = { version = "4.0.27", features = ["derive"] }
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"

